<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:checkableBehavior="single">


    <group>
        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search_properties"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_addPro"
            android:icon="@drawable/ic_add"
            android:title="@string/addPro" />
        <item
            android:id="@+id/menu_my_addedPro"
            android:icon="@drawable/ic_myadded"
            android:title="@string/my_added_properties" />
    </group>


    <group>
        <item
            android:id="@+id/menu_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/Login" />
        <item
            android:id="@+id/menu_register"
            android:icon="@drawable/ic_menu_register"
            android:title="@string/Register" />
        <item
            android:id="@+id/menu_my_account"
            android:icon="@drawable/ic_my_account"
            android:title="@string/logout" />
    </group>

    <group>
        <item
            android:id="@+id/menu_about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/menu_contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/menu_contact_us" />
    </group>

    <group>
        <item
            android:id="@+id/menu_exit_id"
            android:icon="@drawable/ic_exit"
            android:title="@string/Exit" />
    </group>
</menu>