<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="nicehome2018.nicehome.Login"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/Login"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_toolbar_on_back_press"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/logodarkblue"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:padding="3dp">
        <TextView
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_1"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            />
        <TextView
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us_nice_home"
            android:textColor="@color/colorPrimarytrans"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_3"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:gravity="start"
            />
        <TextView
            android:textColor="@color/white"
            android:id="@+id/texView"
            android:text="@string/login_4"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/login_join_us_btn"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:text="@string/join_us"
                android:textColor="@color/white"
                 android:background="@drawable/shape_button_style_join_us"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/login_contact_us_btn"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:text="@string/login_contact_us"
                android:textColor="@color/white"
                android:background="@drawable/shape_button_style_lost_pass"
                />


        </LinearLayout>


    </LinearLayout>

//////////////////////////////
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_edt_layout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp">
            <androidx.appcompat.widget.AppCompatEditText
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_username_edt"
                android:inputType="text"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/username"
                android:textSize="15sp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_username"
                android:drawableLeft="@drawable/ic_username">
            </androidx.appcompat.widget.AppCompatEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edt_layout"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <androidx.appcompat.widget.AppCompatEditText
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_password_edt"
                android:inputType="textPassword"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/password"
                android:textSize="15sp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_pass"
                android:drawableLeft="@drawable/ic_pass">
            </androidx.appcompat.widget.AppCompatEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/login_login_btn"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/shape_button_style_join_us"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/login_lost_pass_btn"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/lost_your_password"
            android:textColor="@color/primary_text"
            android:background="@android:color/transparent"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:layout_marginBottom="5dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            />

    </LinearLayout>
</LinearLayout>
    </ScrollView>
</LinearLayout>

