<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="nicehome2018.nicehome.Register"
    android:focusableInTouchMode="true"
    android:id="@+id/reg_relative_lay">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/Register"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_toolbar_on_back_press"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/create_an_account"
                    android:textColor="@color/colorPrimary"
                    android:background="@android:color/transparent"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:layout_marginBottom="5dp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_username_edt_layout"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/reg_username_edt"
                        android:inputType="text"
                        android:textColorHint="@color/colorAccent"
                        android:hint="@string/username"
                        android:textSize="15sp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_username"
                        android:drawableLeft="@drawable/ic_username">
                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_name_edt_layout"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/reg_name_edt"
                        android:inputType="phone"
                        android:textColorHint="@color/colorAccent"
                        android:hint="@string/phone"
                        android:textSize="15sp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawableLeft="@drawable/ic_phone">
                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_email_edt_layout"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/reg_email_edt"
                        android:inputType="text"
                        android:textColorHint="@color/colorAccent"
                        android:hint="@string/email"
                        android:textSize="15sp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_email"
                        android:drawableLeft="@drawable/ic_email">
                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_password_edt_layout"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/reg_password_edt"
                        android:inputType="textPassword"
                        android:textColorHint="@color/colorAccent"
                        android:hint="@string/password"
                        android:textSize="15sp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_pass"
                        android:drawableLeft="@drawable/ic_pass"
                        android:gravity="start">
                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reg_confirm_password_edt_layout"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:gravity="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/reg_confirm_password_edt"
                        android:inputType="textPassword"
                        android:textColorHint="@color/colorAccent"
                        android:hint="@string/confirm_password"
                        android:textSize="15sp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_pass"
                        android:drawableLeft="@drawable/ic_pass">
                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/sub_pro_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_agree_with_your"
                    android:textColor="@color/secondary_text"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:visibility="gone"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/reg_register_btn"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:text="@string/Register"
                    android:textColor="@color/white"
                    android:background="@drawable/shape_button_style_join_us"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
